--- a/index.html
+++ b/index.html
@@ -1,7 +1,24 @@
+
 <!DOCTYPE html>
 <html>
+<head>
+    <title>Jeelan Computer Services</title>
+    <link rel="icon" type="image/x-icon" href="https://github.com/JeelanPro/JeelanPro.github.io/raw/main/icons8-j-67.ico">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+    <h1 style="text-align:center">Welcome to Jeelan Teams on Summer</h1>
+    <h3 style="text-align:center">----------------------News----------------------</h3>
+    <p>Updating...</p>
+    <p>1. Only Jeelan News: <a href="https://docs.google.com/presentation/d/1_CZu2H_CbkFBNCvPwcAsVMiizGfSji83hqF1Ou4p13I/edit?usp=sharing">Click here</a> <p/>
+    <p>2. Jeelan Team News: <a href="https://docs.google.com/presentation/d/17rUecEUw8wIobcii0de-VCxFLaADEz1YyBKDc_MnlcY/edit?usp=sharing">Click here</a> <p/>
+    <p>2. Play with Jeelan Team: <a href="https://docs.google.com/presentation/d/1DrPWWBAg23y3K9CMDP5y3JFQ---Iyy9YXzKO3eTgRxI/edit?usp=sharing">Click here</a> <p/>
+    
+    <h3>Videos<h3/>
+    <video width="420" height="240" controls>
+        <source src="https://github.com/JeelanPro/JeelanPro.github.io/raw/main/Jeelan%20Team.mp4" 
+            type=video/mp4> 
+    </video>
 </body>
 </html>
+
