--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ so new updates coming soon or later :)
             <h1>Abouts</h1>
             <pre>
 Hi, I am Jeelan.
-I am a programmer, I am trying to update the website too more powerful and strong.
+I am a programmer, I am trying to update this website too make more powerful and strong.
 There is some updates it's coming soon or later and new Video Coming soon.
 To make this website I use <a href="https://www.w3schools.com/howto/default.asp">W3Schools How to</a>.
 Thank you!
