--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
         <div id="a" class="tabcontent">
             <h1>Home</h1>
             <h3>Welcome to My Website!</h3>
+            <p>New update on October 9 2023 Monday</p>
             <p>This is my old video. My new video is coming soon. Here is My Old Video:</p>
             <video style="border-radius: 10px;" width="420" height="240" controls>
                 <source src="https://github.com/JeelanPro/JeelanPro.github.io/raw/main/Jeelan%20Team.mp4" type=video/mp4 />
