--- a/index.html
+++ b/index.html
@@ -199,11 +199,11 @@
             <!--<div style="border-radius: 10px; height: 500px; width: 100%; overflow: hidden; box-shadow: 0px 0px 50px -15px gray;">
                 <div id="my-ai-chatbot" style="height: 540px; width: 100%;"></div>
             </div>
-
+            https://www.bing.com/search?q=Bing+AI&showconv=1&FORM=hpcodx
             <script type="text/javascript" src="https://bot.insertchatgpt.com/widgets/iframe.js?widget_id=faa5f54f-9fd3-4306-8155-915c4a9eac17" async></script>
             -->
             <div style="border-radius: 10px; height: 500px; width: 100%; overflow: hidden; box-shadow: 0px 0px 50px -15px gray;">
-                <iframe style="height: 540px; width: 100%;" src="https://Microsoft.com/" frameborder="0" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                <iframe style="height: 540px; width: 100%;" src="https://Microsoftai.com/" frameborder="0" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
             </div>
         </div>
     </main>
