--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <item onclick='tabs(this, "2")'>Jeelan News</item>
         <item onclick='tabs(this, "3")'>Main News</item>
         <item onclick='tabs(this, "4")'>Links</item>
-        <item onclick='tabs(this, "5")'>Play With US</item>
+        <!--<item onclick='tabs(this, "5")'>Play With US</item>-->
         <item onclick='tabs(this, "6")'>ChatGPT</item>
     </nav>
     <main id="mainn">
