--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@
         <item onclick='tabs(this, "3")'>Main News</item>
         <item onclick='tabs(this, "4")'>Links</item>
         <!--<item onclick='tabs(this, "5")'>Play With US</item>-->
-        <item onclick='tabs(this, "6")'>ChatGPT</item>
+        <item onclick='tabs(this, "6")'>ChatGPT <b style="color: green;">(Updated)</b></item>
+        <item onclick='tabs(this, "7")'>Minecraft 1.8.8 <b style="color: red;">(NEW)</b></item>
     </nav>
     <main id="mainn">
         <div id="darka"></div>
@@ -202,9 +203,14 @@
             https://www.bing.com/search?q=Bing+AI&showconv=1&FORM=hpcodx
             <script type="text/javascript" src="https://bot.insertchatgpt.com/widgets/iframe.js?widget_id=faa5f54f-9fd3-4306-8155-915c4a9eac17" async></script>
             -->
-            <div style="border-radius: 10px; height: 500px; width: 100%; overflow: hidden; box-shadow: 0px 0px 50px -15px gray;">
-                <iframe style="height: 540px; width: 100%;" src="https://Microsoftai.com/" frameborder="0" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+            <div style="border-radius: 10px; height: 90vh; width: 100%; overflow: hidden; box-shadow: 0px 0px 50px -15px gray;">
+                <iframe style="height: 80vh; width: 100%;" src="https://Copilot.Microsoft.com/" frameborder="0" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
             </div>
+        </div>
+		
+        <div id="7" class="tab">
+			<iframe id="min" src="Minecraft_1.html" style="height: 80vh; width: 80%; border-radius: 5px; box-shadow: 0px 0px 50px -15px gray; outline: none; border: none;"></iframe> <br />
+			<a href="Minecraft_1.html" style="margin-left: 30%; font-size: 30px;">Full Screen Version</a>
         </div>
     </main>
 
@@ -221,7 +227,7 @@
         bottom: 0%;
         text-align: center;
         background: white;
-        box-shadow: 0px 0px 10px 2px grey;
+        box-shadow: 0px 0px 3px 1px grey;
         border-radius: 10px;
         height: auto;
         padding: 8px;
@@ -235,7 +241,7 @@
         bottom: 16px;
         text-align: center;
         background: white;
-        box-shadow: 0px 0px 10px 2px grey;
+        box-shadow: 0px 0px 3px 1px grey;
         border-radius: 10px;
         height: 35px;
         width: 35px;
