--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
         <item onclick='tabs(this, "3")'>Main News</item>
         <item onclick='tabs(this, "4")'>Links</item>
         <!--<item onclick='tabs(this, "5")'>Play With US</item>-->
-        <item onclick='tabs(this, "6")'>ChatGPT <b style="color: green;">(Updated)</b></item>
-        <item onclick='tabs(this, "7")'>Minecraft 1.8.8 <b style="color: red;">(NEW)</b></item>
+        <item onclick='tabs(this, "6")'>ChatGPT</item>
+        <item onclick='tabs(this, "7")'>Minecraft 1.8.8 <b style="color: green;">(Updated)</b></item>
     </nav>
     <main id="mainn">
         <div id="darka"></div>
@@ -210,8 +210,8 @@
         </div>
 		
         <div id="7" class="tab">
-			<iframe id="min" src="Minecraft_1.html" style="height: 80vh; width: 80%; border-radius: 5px; box-shadow: 0px 0px 50px -15px gray; outline: none; border: none;"></iframe> <br />
-			<a href="Minecraft_1.html" style="margin-left: 30%; font-size: 30px;">Full Screen Version</a>
+			<!--<iframe id="min" src="Minecraft_1.html" style="height: 80vh; width: 80%; border-radius: 5px; box-shadow: 0px 0px 50px -15px gray; outline: none; border: none;"></iframe> <br />-->
+			<a href="Minecraft_1.html" style="margin-left: 30%; font-size: 30px;">Play Minecraft</a>
         </div>
     </main>
 
