--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jeelan Computer Service</title>
     <link rel="icon" type="image/x-icon" href="Images/icon.ico" />
+	<meta name="google-site-verification" content="VrldYh-OrFjEx9pbSW-kkHj1u6GnjOcZKHPazBDBY5o" />
+	<script>
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+	ga('create', 'UA-XXXXX-Y', 'auto');
+	ga('send', 'pageview');
+	</script>
     <style>
         body{
             font-family: Arial, Helvetica, sans-serif;
@@ -149,6 +159,11 @@
     </style>
 </head>
 <body>
+	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-ABCDEFGH"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
+		
     <div id="preloader"></div>
     <div id="topnav">
         <img src="Images/menu1.png" alt="menu" onclick="menu(this)" id="menubtn" />
